Layone and index page. Sass + jekyll watcher script

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 ---
 layout: default
-title: A website
+title: Compoucher
 ---
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+<div id="brag">
+  <h1>Compoucher</h1>
+  <h2>Apps. Web. Works of Art</h2>
 </div>
+
+<article>
+This is a cool place where the article thing could go explaning a little bit of
+what compoucher is all about. Maybe use some of the column things to make the
+text a little bit more readable. That would be pretty cool. Compoucher is about
+creating a releasing humanist experiences through software and digital art.
+Well designed software should complement the human condition instead of
+alienate us. That's pretty cool I hope this watch thing actually works out!
+</article>
+
