--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@ title: Compoucher
   <h2>Apps. Web. Works of Art</h2>
 </div>
 
-<article>
+<div class="frontcopy">
 This is a cool place where the article thing could go explaning a little bit of
 what compoucher is all about. Maybe use some of the column things to make the
 text a little bit more readable. That would be pretty cool. Compoucher is about
 creating a releasing humanist experiences through software and digital art.
 Well designed software should complement the human condition instead of
 alienate us. That's pretty cool I hope this watch thing actually works out!
-</article>
+</div>
 
+<div class="frontcopy">
+Another article about some really cool stuff and what the deal really is here
+and what's going on you know? Can't be too clear about things with software
+anymore. Electronic pulses are really cool, what do you think ?
+</div>
