Body copy, colors, font-weight

--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@ title: Compoucher
 </div>
 
 <div class="frontcopy">
-This is a cool place where the article thing could go explaning a little bit of
-what compoucher is all about. Maybe use some of the column things to make the
-text a little bit more readable. That would be pretty cool. Compoucher is about
-creating a releasing humanist experiences through software and digital art.
-Well designed software should complement the human condition instead of
-alienate us. That's pretty cool I hope this watch thing actually works out!
+  <span class="orange">Insightful and delightful products crafted for
+everyone to enjoy. </span> <p> Mastry of craft enables self expression;  The immersive sensory
+experience of personal web stuff digital art can delight, challenge, and engage the mind further
+than traditional, static media something about Internet things are more
+immersive and personal. Technology to push us further; make us laugh;
+alleviate hardships.<p>
 </div>
 
 <div class="frontcopy">
-Another article about some really cool stuff and what the deal really is here
-and what's going on you know? Can't be too clear about things with software
-anymore. Electronic pulses are really cool, what do you think ?
-</div>
+  <span class="orange"> We are software engineer and designers who create
+    original pieces and revenue focused products.</span><p>Through experimental hackathons,
+  we create original works of art and the next big idea.</p> </div>
