Footer content and style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Compoucher
 </div>
 
 <div class="frontcopy">
-  <span class="orange">Insightful and delightful products crafted for
+  <span class="orange">Insightful and delightful products, games, and content crafted for
 everyone to enjoy. </span> <p> Mastry of craft enables self expression;  The immersive sensory
 experience of personal web stuff digital art can delight, challenge, and engage the mind further
 than traditional, static media something about Internet things are more
