--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@ title: Compoucher
 
 <div class="frontcopy">
   <span class="orange">Insightful and delightful products, games, and content crafted for
-everyone to enjoy. </span> <p> Mastry of craft enables self expression;  The immersive sensory
-experience of personal web stuff digital art can delight, challenge, and engage the mind further
-than traditional, static media something about Internet things are more
-immersive and personal. Technology to push us further; make us laugh;
-alleviate hardships.<p>
+everyone to enjoy. </span> <p>Technology is meant to push us further, make us
+laugh and enhance relationships. Well designed experiences which get out of the
+way and leave what matters most.</p>
 </div>
 
-<div class="frontcopy">
+<div class="frontcopy last">
   <span class="orange"> We are software engineer and designers who create
-    original pieces and revenue focused products.</span><p>Through experimental hackathons,
-  we create original works of art and the next big idea.</p> </div>
+    original pieces and revenue focused products.</span><p>Following the
+  same crowd leads down the same, overtrodden path. Through experimental hackathons,
+  we create original works of art and the next big ideas.</p></div>
+
+<div class="stripe"></div>
