Changed styles I guess

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@ way and leave what matters most.</p>
   <span class="orange"> We are software engineer and designers who create
     original pieces and revenue focused products.</span><p>Following the
   same crowd leads down the same, overtrodden path. Through experimental hackathons,
-  we create original works of art and the next big ideas.</p></div>
+  we arrive at the next big thing.</p></div>
 
 <div class="stripe"></div>
