Responsive title text size

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ way and leave what matters most.</p>
 </div>
 
 <div class="frontcopy last">
-  <span class="orange"> We are software engineer and designers who create
-    original pieces and revenue focused products.</span><p>Following the
+  <span class="orange"> We are software engineers and designers who create
+    experimental prototypes and finished products.</span><p>Following the
   same crowd leads down the same, overtrodden path. Through experimental hackathons,
   we arrive at the next big thing.</p></div>
 
