Shrink darn footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Compoucher
 </div>
 
 <div class="frontcopy">
-  <span class="orange">Insightful and delightful products, games, and content crafted for
+  <span class="orange">Insightful and delightful apps, games, and content crafted for
 everyone to enjoy. </span> <p>Technology is meant to push us further, make us
 laugh and enhance relationships. Well designed experiences which get out of the
 way and leave what matters most.</p>
