--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Compoucher
 </div>
 
 <div class="frontcopy">
-  <h3>What we're about {%icon fa-gears %}</h3>
+  <h3>What we're about</h3>
   <span class="orange">Insightful and delightful apps, games, and content crafted for
 everyone to enjoy. </span> <p>Technology is meant to push us further, make us
 laugh and enhance relationships. Well designed experiences which get out of the
@@ -17,7 +17,7 @@ way and leave what matters most.</p>
 </div>
 
 <div class="frontcopy last">
-  <h3>Who we are {% icon  fa-thumbs-o-up %}</h3>
+  <h3>Who we are</h3>
   <span class="orange"> We are software engineers and designers who create
     experimental prototypes and finished products.</span><p>Following the
   same crowd leads down the same, overtrodden path. Through experimental hackathons,
@@ -26,7 +26,7 @@ way and leave what matters most.</p>
 <div class="stripe"></div>
 
 <div id="contactus">
-  <h3>Consulting {% icon fa-briefcase %} </h3>
+  <h3>Consulting </h3>
 If you have an app idea, or an existing project that needs a life perserver,
 we can help. Let's talk about how we can make your project an overwhelming
 success.</div>
