--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="author" content="@zmcartor">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
+<link href="https://micro.blog/compoucher" rel="me" />
 </head>
 <body class="w-100 sans-serif bg-white">
   <header class="cf ph3 ph5-ns pv5 fn fl-ns w-50-ns pr4-ns">
