--- a/index.html
+++ b/index.html
@@ -8,9 +8,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
 <link href="https://micro.blog/compoucher" rel="me" />
+
+ <!-- Google Analytics -->
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-113909515-1', 'auto');
+	ga('send', 'pageview', { 'page': location.pathname + location.search + location.hash});
+	ga('set', 'anonymizeIp', false);
+    </script>
+    <!-- End Google Analytics -->
+
+
 </head>
 <body class="w-100 sans-serif bg-white">
   <header class="cf ph3 ph5-ns pv5 fn fl-ns w-50-ns pr4-ns">
+
  <nav class="bt bb tc mw7 center mt0">
     <a class="f6 f5-l link bg-animate black-80 hover-bg-lightest-blue dib pa3 ph4-l" href="/">Home</a>
     <a class="f6 f5-l link bg-animate black-80 hover-bg-light-green dib pa3
