--- a/about.html
+++ b/about.html
@@ -60,12 +60,19 @@ title : About
 
     <p class="f5 lh-copy mt0-ns">
     <h3>What I’m Looking For</h3>
-I’m seeking the company of motivated developers and creative individuals. I think source code is written for humans to read, machine execution is incidental. I hold myself accountable and my work to a high standard. I seek a place where others have the same passion for high quality creativity.
+I’m seeking the company of motivated developers and creative individuals. I
+think source code is written for humans to read, machine execution is
+incidental. I hold myself accountable and my work to a high standard. Always
+seeking company of others with the same passion for high quality work.
     </p>
 
     <p class="f5 lh-copy mt0-ns">
     <h3>About Me</h3>
-I’m a pragmatic thinker who believes there is no such thing as a perfect program, just some are more optimal than others. When it comes to a problem I’m having trouble solving, I feel it’s better to take a walk in the park and let my subconscious have a crack at it. My wide technical skill range includes work in web hacking, reverse engineering and mentorship.
+I’m a pragmatic thinker who believes there is no such thing as a perfect
+program, just some are more optimal than others. When it comes to a problem I’m
+having trouble solving, I feel it’s better to take a walk in the park and let
+the subconscious work on it. My wide technical skill range includes work in
+reverse engineering, web development, iOS consulting and mentorship.
 </p>
   </article>
 
